--- a/Remidomo/AndroidManifest.xml
+++ b/Remidomo/AndroidManifest.xml
@@ -17,8 +17,7 @@
 
     <application
         android:icon="@drawable/app_icon"
-        android:label="@string/app_name"
-        android:debuggable="true" >
+        android:label="@string/app_name" >
 
         <activity
             android:name=".RDActivity"
@@ -35,7 +34,8 @@
         
         <service
             android:name=".RDService"
-            android:label="@string/service_label" >
+            android:label="@string/service_label"
+            android:exported="false" >
             <intent-filter>
 				<action android:name="com.remo.remidomo.RDService" />
 			</intent-filter>
