--- a/Remidomo/.classpath
+++ b/Remidomo/.classpath
@@ -7,7 +7,10 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/Remidomo/lib/androidplot-core-0.5.0-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="lib/json-simple-1.1.1.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry exported="true" kind="lib" path="lib/gcm-server.jar" sourcepath="lib/gcm-server-src.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gcm.jar" sourcepath="lib/gcm-src.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
