--- a/Remidomo/AndroidManifest.xml
+++ b/Remidomo/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.remi.remidomo"
-    android:versionCode="7"
-    android:versionName="0.7-β" >
+    android:versionCode="8"
+    android:versionName="0.8" >
 
     <uses-sdk android:minSdkVersion="8"
               android:targetSdkVersion="9" />
