Issue 5: Add prefs to manage service start/stop
- Option to start service at boot time
- Option to keep service alive when activity finishes

--- a/Remidomo/AndroidManifest.xml
+++ b/Remidomo/AndroidManifest.xml
@@ -37,7 +37,7 @@
             android:label="@string/service_label"
             android:exported="false" >
             <intent-filter>
-				<action android:name="com.remo.remidomo.RDService" />
+				<action android:name="com.remi.remidomo.BOOTKICK" />
 			</intent-filter>
             
         </service>
