--- a/Remidomo/AndroidManifest.xml
+++ b/Remidomo/AndroidManifest.xml
@@ -38,13 +38,23 @@
             android:exported="false" >
             <intent-filter>
 				<action android:name="com.remi.remidomo.BOOTKICK" />
+				<action android:name="com.remi.remidomo.BATLOW" />
+				<action android:name="com.remi.remidomo.POWER_CONN" />
+				<action android:name="com.remi.remidomo.POWER_DISC" />
 			</intent-filter>
-            
         </service>
-   
-    	<receiver android:name="BootReceiver">
+
+    	<receiver android:name=".BootReceiver">
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED" />
+			</intent-filter>
+		</receiver>
+
+    	<receiver android:name=".BatteryReceiver">
+			<intent-filter>
+			    <action android:name="android.intent.action.ACTION_BATTERY_LOW" />
+				<action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
+				<action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
 			</intent-filter>
 		</receiver>
 
