Internet@TV: Introduce dashboard with temperatures + energy (requires a new JSON output from server)

--- a/Internet@TV/app.json
+++ b/Internet@TV/app.json
@@ -1,5 +1,5 @@
 { 
-   "scenes" : [ "ActionBar", "Thermo", "Pool", "Energy"],
+   "scenes" : [ "ActionBar", "Dashboard", "Thermo", "Pool", "Energy"],
    "files" : [],
 
    "changeSource" : false,
