--- a/Remidomo/.classpath
+++ b/Remidomo/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry exported="true" kind="lib" path="lib/gcm-server.jar" sourcepath="lib/gcm-server-src.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gcm.jar" sourcepath="lib/gcm-src.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/android-support-v13.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
