--- a/Remidomo/AndroidManifest.xml
+++ b/Remidomo/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.remi.remidomo"
-    android:versionCode="106"
-    android:versionName="1.06" >
+    package="com.remi.remidomo.reloaded"
+    android:versionCode="200"
+    android:versionName="2.0" >
 
     <uses-sdk android:minSdkVersion="8"
               android:targetSdkVersion="9" />
@@ -37,10 +37,10 @@
             android:label="@string/service_label"
             android:exported="false" >
             <intent-filter>
-				<action android:name="com.remi.remidomo.BOOTKICK" />
-				<action android:name="com.remi.remidomo.BATLOW" />
-				<action android:name="com.remi.remidomo.POWER_CONN" />
-				<action android:name="com.remi.remidomo.POWER_DISC" />
+				<action android:name="com.remi.remidomo.reloaded.BOOTKICK" />
+				<action android:name="com.remi.remidomo.reloaded.BATLOW" />
+				<action android:name="com.remi.remidomo.reloaded.POWER_CONN" />
+				<action android:name="com.remi.remidomo.reloaded.POWER_DISC" />
 			</intent-filter>
         </service>
 
@@ -61,11 +61,11 @@
     	<receiver android:name=".PushReceiver" android:permission="com.google.android.c2dm.permission.SEND">
           <intent-filter>
               <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-              <category android:name="com.remi.remidomo" />
+              <category android:name="com.remi.remidomo.reloaded" />
           </intent-filter>
           <intent-filter>
               <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
-              <category android:name="com.remi.remidomo" />
+              <category android:name="com.remi.remidomo.reloaded" />
           </intent-filter>
       </receiver>
     	
