--- a/Remidomo/AndroidManifest.xml
+++ b/Remidomo/AndroidManifest.xml
@@ -4,8 +4,8 @@
     android:versionCode="200"
     android:versionName="2.0" >
 
-    <uses-sdk android:minSdkVersion="8"
-              android:targetSdkVersion="9" />
+    <uses-sdk android:minSdkVersion="10"
+              android:targetSdkVersion="10" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -17,7 +17,8 @@
 
     <application
         android:icon="@drawable/app_icon"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:allowBackup="true" >
 
         <activity
             android:name=".RDActivity"
