--- a/Remidomo/AndroidManifest.xml
+++ b/Remidomo/AndroidManifest.xml
@@ -31,7 +31,7 @@
             </intent-filter>
         </activity>
         
-        <activity android:name="Preferences" />
+        <activity android:name="com.remi.remidomo.reloaded.prefs.PreferencesActivity" />
         
         <service
             android:name=".RDService"
