--- a/Remidomo/.classpath
+++ b/Remidomo/.classpath
@@ -2,16 +2,16 @@
 <classpath>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry exported="true" kind="lib" path="lib/androidplot-core-0.5.0-release.jar" sourcepath="lib/androidplot-core-0.5.0-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/Remidomo/lib/androidplot-core-0.5.0-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="lib/json-simple-1.1.1.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry exported="true" kind="lib" path="lib/gcm-server.jar" sourcepath="lib/gcm-server-src.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gcm.jar" sourcepath="lib/gcm-src.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/android-support-v13.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/androidplot-core-0.5.2.jar" sourcepath="/home/rems/Remidomo/Remidomo/lib/androidplot-core-0.5.2-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/home/rems/Remidomo/Remidomo/lib/androidplot-core-0.5.2-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
