--- a/Remidomo/AndroidManifest.xml
+++ b/Remidomo/AndroidManifest.xml
@@ -18,7 +18,13 @@
     <application
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
-        android:allowBackup="true" >
+        android:allowBackup="true"
+        android:backupAgent="Backup"
+        android:restoreAnyVersion="true" >
+
+        <meta-data
+            android:name="com.google.android.backup.api_key"
+            android:value="AEdPqrEAAAAIIsaDPRvIOO8YmtvJLt7oVr1kTJF5n4UsL86mNQ" />
 
         <activity
             android:name=".RDActivity"
