--- a/Remidomo/app/build.gradle
+++ b/Remidomo/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'android'
 android {
     compileSdkVersion 17
-    buildToolsVersion '19.0.1'
+    buildToolsVersion '20.0.0'
 
     defaultConfig {
         minSdkVersion 15
@@ -22,4 +22,5 @@ dependencies {
     compile files('lib/gcm.jar')
     compile files('lib/json-simple-1.1.1.jar')
     compile files('lib/android-support-v13.jar')
+    compile project(':RemidomoCommon')
 }
