--- a/Remidomo/app/src/main/AndroidManifest.xml
+++ b/Remidomo/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:allowBackup="true"
-        android:backupAgent="com.remi.remidomo.common.Backup"
+        android:backupAgent="com.remi.remidomo.reloaded.Backup"
         android:restoreAnyVersion="true" >
 
         <meta-data
